--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,55 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html {
+  --s: 400px;
+  /* control the size */
+  --c1: #AB3E5B;
+  --c2: #FFBE40;
+
+  --_g:
+    #0000 25%, #0008 47%, var(--c1) 53% 147%, var(--c2) 153% 247%,
+    var(--c1) 253% 347%, var(--c2) 353% 447%, var(--c1) 453% 547%, #0008 553%, #0000 575%;
+  --_s: calc(25%/3) calc(25%/4) at 50%;
+  background:
+    radial-gradient(var(--_s) 100%, var(--_g)),
+    radial-gradient(var(--_s) 100%, var(--_g)) calc(var(--s)/2) calc(3*var(--s)/4),
+    radial-gradient(var(--_s) 0, var(--_g)) calc(var(--s)/2) 0,
+    radial-gradient(var(--_s) 0, var(--_g)) 0 calc(3*var(--s)/4),
+    repeating-linear-gradient(90deg, #ACCEC0 calc(25%/-6) calc(25%/6), #61A6AB 0 calc(25%/2));
+  background-size: var(--s) calc(3*var(--s)/2)
+}
+
+.container {
+  display: flex;
+gap: 0rem;  flex-direction: column;
+  width: 100vw;
+  justify-items: center;
+  align-items: center;
+  padding: 2rem 0rem;
+}
+
+h1 {
+  color: aliceblue;
+  font-weight: 900;
+  background-color: #AB3E5B;
+  padding: 0rem 3rem;
+  font-family: 'Trebuchet MS', sans-serif;
+  font-size: 3rem;
+  border-radius: 2rem;
+  text-align: center;
+}
+
+.formContainer {
+  width: 30%;
+  padding: 2.5rem 3rem;
+  background: rgba(255, 255, 255, 0.921);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  display: flex;
+  flex-direction: column;
+}
